--- a/app/layout/header/header.html
+++ b/app/layout/header/header.html
@@ -1,21 +1,11 @@
-<md-toolbar>
- <div class="md-toolbar-tools">
-   <h1>
-     <span>Welcome </span>
-   </h1>
-   <span flex></span>
-   <div ng-show="vm.Acl.hasRole('guest')">
-     <md-button md-no-ink aria-label="Learn More"  sign-in>
-       Sign In
-     </md-button>
-     <md-button md-no-ink aria-label="Learn More" sign-up>
-       Sign Up
-     </md-button>
-   </div>
-   <div ng-show="vm.Acl.hasRole('user')">
-     <md-button md-no-ink aria-label="Learn More" logout>
-      Logout
-     </md-button>
-   </div>
- </div>
-</md-toolbar>
+<nav>
+  <div class="wrapper">
+    <div class="menu" ng-show="vm.Acl.hasRole('guest')">
+      <a class="menu__btn" sign-in >Sing In</a>
+      <a class="menu__btn" sign-up>Sing In</a>
+    </div>
+    <div class="menu" ng-show="vm.Acl.hasRole('user')">
+      <a class="menu__btn" logout >Logout</a>
+    </div>
+  </div>
+</nav>
