--- a/resources/sass/base/_mixins.scss
+++ b/resources/sass/base/_mixins.scss
@@ -1,1 +1,18 @@
 /* MIXINS */
+@mixin pos-center {
+  position: absolute;
+  top: 0; right: 0; bottom: 0; left: 0;
+  margin: auto;
+}
+
+@mixin clearfix {
+  &:before,
+  &:after {
+    content: "";
+    display: table;
+  }
+
+  &:after {
+    clear: both;
+  }
+}
