--- a/resources/sass/base/_mixins.scss
+++ b/resources/sass/base/_mixins.scss
@@ -1,8 +1,15 @@
 /* MIXINS */
 @mixin pos-center {
-  position: absolute;
-  top: 0; right: 0; bottom: 0; left: 0;
-  margin: auto;
+   position: absolute;
+   top: 50%;
+   left: 50%;
+   transform: translate(-50%, -50%);
+}
+
+@mixin flex-end {
+  display: flex;
+  align-items: center;
+  justify-content: flex-end;
 }
 
 @mixin clearfix {
