--- a/resources/sass/base/_variables.scss
+++ b/resources/sass/base/_variables.scss
@@ -1,5 +1,7 @@
 /* COLORS */
 
-$color-bg: #FFF;
-$color-header: #cfd9db;
+$color-bg: #fef5ee;
+$color-white: #fff;
+$color-header: #abb2e1;
 $color-dark : #2a393c;
+$color-title: #b94e58;
