--- a/resources/sass/layout/_header.scss
+++ b/resources/sass/layout/_header.scss
@@ -6,27 +6,21 @@ nav {
   left: 0;
   width: 100%;
   z-index: 2;
-  background: #fff;
+  background: $color-header;
   height: auto;
 
   .menu {
-    display: flex;
-    align-items: center;
-    justify-content: flex-end;
+    @include flex-end;
     padding: 10px;
 
     .menu__btn {
       text-decoration: none;
       font-size: 24px;
       padding: 0 10px 0 10px;
-      color: $color-dark;
+      color: $color-bg;
       cursor: pointer;
-
-      &:hover {
-        color: #77a2aa;
-      }
-
     }
+
   }
 
 }
