--- a/resources/sass/base/_variables.scss
+++ b/resources/sass/base/_variables.scss
@@ -2,6 +2,8 @@
 
 $color-bg: #fef5ee;
 $color-white: #fff;
-$color-header: #abb2e1;
+$color-header: #3ba3ac;
 $color-dark : #2a393c;
 $color-title: #b94e58;
+$color-btns: #f50057;
+$color-dark: #112327;
