--- a/resources/sass/layout/_header.scss
+++ b/resources/sass/layout/_header.scss
@@ -16,9 +16,11 @@ nav {
     .menu__btn {
       text-decoration: none;
       font-size: 24px;
-      padding: 0 10px 0 10px;
+      padding: 5px;
+      margin: 0px 0px 0px 10px;
       color: $color-bg;
       cursor: pointer;
+      background-color: $color-btns;
     }
 
   }
