--- a/resources/sass/base/_mixins.scss
+++ b/resources/sass/base/_mixins.scss
@@ -12,6 +12,13 @@
   justify-content: flex-end;
 }
 
+@mixin flex-start {
+  display: flex;
+  align-items: center;
+  flex-flow: row;
+  justify-content: flex-start;
+}
+
 @mixin clearfix {
   &:before,
   &:after {
