--- a/resources/sass/base/_variables.scss
+++ b/resources/sass/base/_variables.scss
@@ -2,7 +2,7 @@
 
 $color-bg: #fef5ee;
 $color-white: #fff;
-$color-header: #3ba3ac;
+$color-header: rgba(59, 163, 172, 0.3);
 $color-dark : #2a393c;
 $color-title: #b94e58;
 $color-btns: #f50057;
