--- a/app/core/components/product.details/details.html
+++ b/app/core/components/product.details/details.html
@@ -1,2 +1,12 @@
-<h1>{{$ctrl.product.title}}</h1>
-<p>{{$ctrl.product.text}}</p>
+<div class="row product__details">
+
+<div class="col-lg-12 col-xs-12">
+  <div class="col-lg-8 col-xs-12">
+    <h1>{{$ctrl.product.title}}</h1>
+    <p>{{$ctrl.product.text}}</p>
+  </div>
+  <div class="col-lg-4 col-xs-12">
+    <img src="./img/watch.png"/>
+  </div>
+</div>
+</div>
