Create review slicing, custom scrollbar

--- a/app/core/components/review/create-review.html
+++ b/app/core/components/review/create-review.html
@@ -1,3 +1,8 @@
-<textarea ng-model="$ctrl.text"></textarea>
-
-<button ng-click="$ctrl.create()">Create</button>
+<div class="row">
+  <div class="form-group form-inline">
+    <div class="col-lg-6 col-xs-12">
+      <textarea class="form-control" ng-model="$ctrl.review.text"></textarea>
+      <a class="btn" ng-click="$ctrl.create()">Create</a>
+    </div>
+  </div>
+</div>
