--- a/app/layout/header/header.html
+++ b/app/layout/header/header.html
@@ -1,9 +1,9 @@
 <nav>
   <div class="menu" ng-show="vm.Acl.hasRole('guest')">
-    <a class="main-btn" sign-in >Sing In</a>
-    <a class="main-btn" sign-up>Sing In</a>
+    <a class="btn" sign-in >Sing In</a>
+    <a class="btn" sign-up>Sing In</a>
   </div>
   <div class="menu" ng-show="vm.Acl.hasRole('user')">
-    <a class="main-btn" logout >Logout</a>
+    <a class="btn" logout >Logout</a>
   </div>
 </nav>
