--- a/resources/sass/vendor.scss
+++ b/resources/sass/vendor.scss
@@ -1,2 +1,3 @@
 @import "~bootstrap/dist/css/bootstrap.css";
 @import "~angular-material/angular-material.min";
+@import "~malihu-custom-scrollbar-plugin/jquery.mCustomScrollbar";
