ModalFactory, SignUp modal

--- a/app/layout/header/header.html
+++ b/app/layout/header/header.html
@@ -1,7 +1,7 @@
 <nav>
   <div class="menu" ng-show="vm.Acl.hasRole('guest')">
     <a class="btn" sign-in >Sing In</a>
-    <a class="btn" sign-up>Sing In</a>
+    <a class="btn" sign-up>Sing Up</a>
   </div>
   <div class="menu" ng-show="vm.Acl.hasRole('user')">
     <a class="btn" logout >Logout</a>
