--- a/resources/sass/base/_base.scss
+++ b/resources/sass/base/_base.scss
@@ -11,6 +11,7 @@ html, body {
 
 body {
   font-family: 'Josefin Sans', sans-serif;
+  background: url('./img/bg.jpg') no-repeat;
 }
 
 a {
@@ -23,7 +24,6 @@ a {
 }
 
 .main {
-  background: url('./img/bg.jpg') no-repeat;
   color: $color-white;
 }
 
@@ -51,5 +51,24 @@ a.btn {
   &:hover {
     color: $color-btns;
     background-color: $color-white;
+  }
+}
+
+.modal {
+  text-align: center;
+  padding: 0!important;
+
+  &:before {
+    content: '';
+    display: inline-block;
+    height: 100%;
+    vertical-align: middle;
+    margin-right: -4px;
+  }
+
+  .modal-dialog {
+    display: inline-block;
+    text-align: left;
+    vertical-align: middle;
   }
 }
