--- a/app/core/components/review/create-review.html
+++ b/app/core/components/review/create-review.html
@@ -1,8 +1,12 @@
-<div class="row">
-  <div class="form-group form-inline">
-    <div class="col-lg-6 col-xs-12">
-      <textarea class="form-control" ng-model="$ctrl.review.text"></textarea>
-      <a class="btn" ng-click="$ctrl.create()">Create</a>
+<div class="container">
+  <div class="row">
+  <form class="form-inline">
+    <div class="form-group ">
+        <textarea class="form-control" ng-model="$ctrl.review.text"></textarea>
     </div>
-  </div>
+    <div class="form-group">
+        <a class="btn" ng-click="$ctrl.create()">Create</a>
+    </div>
+  </form>
+</div>
 </div>
