--- a/resources/sass/base/_base.scss
+++ b/resources/sass/base/_base.scss
@@ -4,7 +4,8 @@
 @import url('https://fonts.googleapis.com/css?family=Alex+Brush');
 
 html, body {
-  height: 100%;
+  min-height: 100vh;
+  height: auto;
   padding: 0;
   margin: 0;
 }
@@ -71,4 +72,19 @@ a.btn {
     text-align: left;
     vertical-align: middle;
   }
+}
+
+.toast {
+  background: $color-white;
+  z-index: 10;
+  color: $color-dark;
+  width: 300px;
+  height: auto;
+  min-height: 50px;
+  padding: 15px;
+  top: 0;
+  right: 0;
+  position: fixed;
+  margin: 5px;
+  font-size: 18px;
 }
