--- a/resources/sass/vendor.scss
+++ b/resources/sass/vendor.scss
@@ -1,3 +1,4 @@
 @import "~bootstrap/dist/css/bootstrap.css";
 @import "~angular-material/angular-material.min";
 @import "~malihu-custom-scrollbar-plugin/jquery.mCustomScrollbar";
+@import "~angular-ui-router-anim-in-out/css/anim-in-out";
