--- a/resources/sass/base/_base.scss
+++ b/resources/sass/base/_base.scss
@@ -17,6 +17,18 @@ body {
 
 a {
   text-decoration: none !important;
+  color: $color-white;
+  &:hover {
+    color: $color-dark;
+  }
+
+  &.active {
+    color: $color-dark;
+  }
+
+  i {
+    font-size: 20px;
+  }
 }
 
 * {
